MODON MRE BPDEV/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>This custom object is part of inventory management to store the project details</description>
    <label>Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>