MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relation field to District object.</description>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>