MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High demand units</fullName>
            </value>
            <value>
                <fullName>Slow-moving units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>