MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Island_Name__c.field-meta.xml
<CustomField>
    <fullName>Island_Name__c</fullName>
    <formula>District__r.Island__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Island Name</label>
    <type>Text</type>
</CustomField>