MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>