MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/OICIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>OICIntegrationStatus__c</fullName>
    <label>OICIntegrationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>