MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/OICNoOf_Retries__c.field-meta.xml
<CustomField>
    <fullName>OICNoOf_Retries__c</fullName>
    <label>OIC No of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>