MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>