MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/ProjectLandMortgageStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectLandMortgageStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Land Mortgage Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>