MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/ProjectNameArabic__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>