MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>