MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SellersPropertyRightsonProjectPlot__c.field-meta.xml
<CustomField>
    <fullName>SellersPropertyRightsonProjectPlot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seller’s Property Rights on Project Plot</label>
    <length>40</length>
    <type>Text</type>
</CustomField>