MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <label>Source Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Entity</valueSetName>
    </valueSet>
</CustomField>