MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Area__c.field-meta.xml
<CustomField>
    <fullName>SPA_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>