MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Authorization_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Authorization Date</label>
    <type>Date</type>
</CustomField>