MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Community__c.field-meta.xml
<CustomField>
    <fullName>SPA_Community__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>