MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Developer_Address__c.field-meta.xml
<CustomField>
    <fullName>SPA_Developer_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Developer Address</label>
    <type>TextArea</type>
</CustomField>