MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>SPA_Developer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>