MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Developer_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>SPA_Developer_Registration_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Developer Registration No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>