MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Financier_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Financier_Name_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Financier Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>