MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Percentage_of_Share_Sold_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Percentage_of_Share_Sold_Arabic__c</fullName>
    <label>SPA Percentage of Share Sold Arabic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>