MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Place_of_Issuance_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Place_of_Issuance_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Place of Issuance Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>