MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Plot_No__c.field-meta.xml
<CustomField>
    <fullName>SPA_Plot_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Plot No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>