MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Project_Land_Mortgage_Status_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Project_Land_Mortgage_Status_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Project Land Mortgage Status Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>