MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Property_Rights__c.field-meta.xml
<CustomField>
    <fullName>SPA_Property_Rights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Property Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>