MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Registration_Authority__c.field-meta.xml
<CustomField>
    <fullName>SPA_Registration_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Registration Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>