MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Representation_Type_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Representation_Type_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Representation Type Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>