MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Sellers_Representative_EID__c.field-meta.xml
<CustomField>
    <fullName>SPA_Sellers_Representative_EID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Sellers Representative EID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>