MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/SPA_Trade_License_No__c.field-meta.xml
<CustomField>
    <fullName>SPA_Trade_License_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Trade License No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>