MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Unified_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Unified_Project_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unified Project Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>