MODON MRE BPDEV/force-app/main/default/objects/Project__c/fields/Units_Launched__c.field-meta.xml
<CustomField>
    <fullName>Units_Launched__c</fullName>
    <label>Units  Launched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>